--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
 dnspython==2.3.0
+elastic-transport==8.4.0
+elasticsearch==8.7.0
 email-validator==2.0.0.post2
 Flask==2.3.2
 flask-babel==3.1.0
