--- a/requirements.txt
+++ b/requirements.txt
@@ -37,3 +37,7 @@ typing_extensions==4.5.0
 urllib3==1.26.15
 Werkzeug==2.3.3
 WTForms==3.0.1
+
+# requirements for Heroku
+psycopg2-binary==2.9.6
+gunicorn==20.1.0
