--- a/requirements.txt
+++ b/requirements.txt
@@ -39,5 +39,5 @@ Werkzeug==2.3.3
 WTForms==3.0.1
 
 # requirements for Heroku
-psycopg2-binary==2.9.6
-gunicorn==20.1.0
+#psycopg2-binary==2.9.6
+#gunicorn==20.1.0
