--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,14 @@ blinker==1.6.2
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
+defusedxml==0.7.1
 dnspython==2.3.0
 elastic-transport==8.4.0
 elasticsearch==8.7.0
 email-validator==2.0.0.post2
 Flask==2.3.2
 flask-babel==3.1.0
+Flask-HTTPAuth==4.8.0
 Flask-Login==0.6.2
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.4
@@ -21,18 +23,26 @@ Flask-Moment==1.0.5
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.1.1
 greenlet==2.0.2
+httpie==3.2.1
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 langdetect==1.0.9
 Mako==1.2.4
+markdown-it-py==2.2.0
 MarkupSafe==2.1.2
+mdurl==0.1.2
+multidict==6.0.4
 packaging==23.1
+Pygments==2.15.1
 PyJWT==2.6.0
+PySocks==1.7.1
 python-dotenv==1.0.0
 pytz==2023.3
 redis==4.5.4
 requests==2.29.0
+requests-toolbelt==1.0.0
+rich==13.3.5
 rq==1.14.0
 six==1.16.0
 SQLAlchemy==2.0.10
